[tool.poetry]
name = "spc-langchain"
version = "0.0.62"
description = "SkyPoint components for the LangChain library."
authors = [
    "Arun raja <arun.raja@skypointcloud.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "spc_langchain" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ragstack-ai = "~0.6.0"
databricks-sql-connector = { version="~3.0.3", extras=["sqlalchemy"] }

[tool.poetry.group.dev.dependencies]
black = "~23.11.0"
faker = "~20.0.0"
mypy = "~1.7.0"
pytest = "~7.4.3"
ruff = "~0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

